--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       && npm install
       && npm run dev
       && test -e ./.env && echo env file exists || cp .env.example .env
-      && php artisan migrate
+      && php artisan migrate --seed
       && php artisan serve --host=0.0.0.0 --port=8000 --no-ansi"
 
 
